--- a/etc/smb.conf
+++ b/etc/smb.conf
@@ -1,5 +1,6 @@
 [global]
 	server string = %h server (Samba, Ubuntu)
+	server role = standalone server
 	map to guest = Bad User
 	obey pam restrictions = Yes
 	pam password change = Yes
